--- a/landing.html/trail1.html
+++ b/landing.html/trail1.html
@@ -229,7 +229,8 @@
                 window.location.href="trail1.html";
             }
             if (value == 'LowestFirst') {
-                window.location.href="trail2.html"
+                window.location.href="trail2.html";
+              
             }
             if (value == 'DiscountDescending') {
                 PHL();
@@ -258,25 +259,24 @@
 <script>
     
             var mobiles = [
-  
-            {
-                name :" Apple iPhone 11 (64GB ROM, 4GB RAM, MHDF3HN/A, Purple)",
-            img:"https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1605262065/Croma%20Assets/Communication/Mobiles/Images/9001728409630.png/mxw_1440,f_auto",
-            id:"PRODUCT ID: 230110",
-            price:"₹49,900.00",
-            category:"mobile"
-    },
-            {
-                name :"Apple iPhone 12 (64GB ROM, 4GB RAM, MGJ63HN/A, White)",
-            img:"https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1605272155/Croma%20Assets/Communication/Mobiles/Images/8999513391134.png/mxw_1440,f_auto",
-            id:"PRODUCT ID: 229920",
-            price:"₹63,900.00"
-    },
+ 
             {
                 name :"Apple iPhone 12 (128GB ROM, 4GB RAM, MGJE3HN/A, Blue)",
             img:"https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1605269941/Croma%20Assets/Communication/Mobiles/Images/8999510638622.png/mxw_1440,f_auto",
             id:"PRODUCT ID: 229927",
             price:"₹68,900.00"
+    },
+    {
+                name :"Apple iPhone 12 (64GB ROM, 4GB RAM, MGJ63HN/A, White)",
+            img:"https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1605272155/Croma%20Assets/Communication/Mobiles/Images/8999513391134.png/mxw_1440,f_auto",
+            id:"PRODUCT ID: 229920",
+            price:"₹63,900.00 "
+    },
+     {        name :" iPhone 11 (64GB ROM, 4GB RAM, MHDF3HN/A, Purple)",
+            img:"https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1605262065/Croma%20Assets/Communication/Mobiles/Images/9001728409630.png/mxw_1440,f_auto",
+            id:"PRODUCT ID: 230110",
+            price:"₹49,900.00 ",
+            category:"mobile"
     },
             {
                 name :"OnePlus 9R (128GB ROM, 8GB RAM, LE2101, Lake Blue)",
