--- a/landing.html/home.html
+++ b/landing.html/home.html
@@ -966,7 +966,7 @@ p{
             </div>
 
             <div class="my-account button" id="button">
-                <p>My<i class="fas fa-angle-down"></i></p>
+                <p>My Account<i class="fas fa-angle-down"></i></p>
 
             </div>
 
@@ -1428,7 +1428,7 @@ function press() {
         window.location.href = "laptop.html"
     }
     if (val === "mobile") {
-        window.location.href = "mobile.html"
+        window.location.href = "trail.html"
     }
     if (val === "tv") {
         window.location.href = "tv.html"
@@ -1488,7 +1488,7 @@ function showSlides() {
 <script>
     document.querySelector(".mob").addEventListener("click", mob);
     function mob() {
-        window.location.href = "mobile.html"
+        window.location.href = "trail.html"
     }
     document.querySelector(".tele").addEventListener("click", tele);
     function tele() {
