--- a/landing.html/laptop.html
+++ b/landing.html/laptop.html
@@ -254,6 +254,7 @@ p{
         </div>
     </main-nav>
     <hr>
+    
     <!-- <h1>laptop</h1> -->
     <div class="laptop">
         <h1>Results for "laptop"</h1>
@@ -449,9 +450,9 @@ function addCart(ele){
         if (val === "audio") {
             window.location.href = "audio.html"
         }
-        else {
-            alert("Oops! Match is not found")
-        }
+        // else {
+        //     alert("Oops! Match is not found")
+        // }
         console.log(val);
 
     }
