--- a/landing.html/trail.html
+++ b/landing.html/trail.html
@@ -17,14 +17,14 @@
         transition: all .5s ease-in;
         display: inline-block;
         margin: 1%;
-        border: 1px solid red;
+        /* border: 1px solid red; */
     }
     .optopnal{
         display: flex;
-        border: 1px solid red;
+        /* border: 1px solid red; */
     }
     .mobile{
-        border: 1px solid red;
+        /* border: 1px solid red; */
     }
     </style>
 </head>
