--- a/landing.html/cart.html
+++ b/landing.html/cart.html
@@ -439,7 +439,7 @@ p{
         cart.splice(index,1);
         localStorage.setItem("cartItem",JSON.stringify(cart))
 
-        alert("Your items is delete succesfully");
+        alert("Your item will be Deleted...");
 
     })
 
