--- a/1.CROMA.html/index.html
+++ b/1.CROMA.html/index.html
@@ -1647,7 +1647,7 @@
     });
 </script> -->
 <script>
-    document.querySelector(".mob").addEventListener("click", mob);
+    // document.querySelector(".mob").addEventListener("click", mob);
     function mob() {
         window.location.href = "trail.html"
     }
