--- a/1.CROMA.html/tv.html
+++ b/1.CROMA.html/tv.html
@@ -458,7 +458,7 @@ function addCart(ele){
 </script>
 <script>
     document.querySelector(".croma").addEventListener("click", function croma() {
-        window.location.href = 'home.html'
+        window.location.href = 'index.html'
     });
 </script>
 <script>
