--- a/1.CROMA.html/audio.html
+++ b/1.CROMA.html/audio.html
@@ -470,7 +470,7 @@ function addCart(ele){
 </script>
 <script>
     document.querySelector(".croma").addEventListener("click", function croma() {
-        window.location.href = 'home.html'
+        window.location.href = 'index.html'
     });
 </script>
 
