--- a/1.CROMA.html/trail.html
+++ b/1.CROMA.html/trail.html
@@ -392,7 +392,7 @@
 </script>
 <script>
         document.querySelector(".croma").addEventListener("click", function croma() {
-            window.location.href = 'home.html'
+            window.location.href = 'index.html'
         });
 </script>
 <script>
